scss elave olundu

--- a/EvTapşırığı/index.html
+++ b/EvTapşırığı/index.html
@@ -7,8 +7,9 @@
       src="https://kit.fontawesome.com/8d0c20f7ab.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" /> -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
   </head>
   <body>
